<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Bmi</string>
    <string name="height_label">Height</string>
    <string name="weight_label">Weight</string>
    <string name="height_hint_metric">cm</string>
    <string name="height_hint_feet">ft</string>
    <string name="height_hint_inches">in</string>
    <string name="weight_hint_metric">kg</string>
    <string name="weight_hint_imperial">lb</string>
    <string name="bmi">BMI = %s</string>
    <string name="conversion_error">Conversion error</string>
    <string name="pref_height_cm" translatable="false">pref_height_cm</string>
    <string name="pref_weight_kg" translatable="false">pref_weight_inch</string>
    <string name="pref_cur_bmi" translatable="false">pref_cur_bmi</string>
    <string name="height_units_metric">cm</string>
    <string name="weight_units_metric">kg</string>
    <string name="height_units_imperial_feets">feet</string>
    <string name="heigt_units_imperial_inches">inches</string>
    <string name="weight_units_imperial">pounds</string>
    <string name="pref_height_feet" translatable="false">pref_height_feet</string>
    <string name="pref_height_inch" translatable="false">pref_height_inch</string>
    <string name="pref_weight_lb" translatable="false">pref_weight_lb</string>

    <!-- Preferences -->
    <string name="pref_units_label">Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>

    <string name="pref_units_key" translatable="false">color</string>
    <string name="pref_units_value_metric" translatable="false">metric</string>
    <string name="pref_units_value_imperial" translatable="false">imperial</string>
    <string name="settings">Settings</string>
</resources>
