<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etWeight"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:hint="@string/weight_hint_metric"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/secondaryText"
        android:textColorHint="@color/hint"
        />

</LinearLayout>